<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_establishment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:src="@drawable/establishment"
        android:contentDescription="@string/iv_icon_establishment"/>

    <TextView
        android:id="@+id/tv_est_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_est_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="16sp" />

    <!--<TextView-->
    <!--android:id="@+id/tv_est_id"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp" />-->

    <TextView
        android:id="@+id/tv_est_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/queue"
        android:contentDescription="@string/iv_icon_line"/>

    <TextView
        android:id="@+id/tv_est_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/time"
        android:contentDescription="@string/iv_icon_average_time"/>

    <Button
        android:id="@+id/bt_go_to_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_line"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/bt_add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favorites"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

</LinearLayout>